assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Ubuntu:ital,wght@1,500&display=swap');

/*heading*/
* {
  margin: 0;
  padding: 0;
  border: none;
}

/* Background video */
#bg-video {
  object-fit: cover;
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
}

h1,
h2 {
  font-family: 'Orbitron', "sans-serif";
  font-size: 50px;
  text-align: center;
  padding-top: 10px;
  color: #2B2B2B;
}

.content {
  padding: 0 18px;
  background-color: white;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}

/* Style footer */
footer {
  padding-top: 25px;
  margin: 0 auto;
  height: 50px;
  bottom: 0;
  width: 100%;
  align-items: center;
  justify-content: center;

}

.social-media {
  text-align: center;
}

.social-media>li {
  display: inline;
  margin: 2em;
  vertical-align: bottom;
}

.social-media i {
  font-size: 160%;
  margin: 1%;
  color: #2B2B2B;
}

/* Style instructions button */
.instructions-btn {
  background: #0077B6;
  color: black;
  height: 30px;
  width: 120px;
  font-family: 'Orbitron', "sans-serif";
  cursor: pointer;
  margin: auto;
  display: block;
  padding-bottom: 10px;
  border-radius: 15px;
  text-align: center;
  line-height: 2.5em;
  text-decoration: none;
}

/* Style feedback button */
.feedback-btn {
  background: #0077B6;
  color: black;
  height: 30px;
  width: 120px;
  font-family: 'Orbitron', "sans-serif";
  cursor: pointer;
  margin: auto;
  display: block;
  padding-bottom: 10px;
  border-radius: 15px;
  text-align: center;
  line-height: 2.5em;
  text-decoration: none;
}

/* Style let's play button */
.letsplay-btn {
  background: #0077B6;
  color: black;
  height: 30px;
  width: 120px;
  font-family: 'Orbitron', "sans-serif";
  cursor: pointer;
  margin: auto;
  display: block;
  padding-bottom: 10px;
  border-radius: 15px;
  text-align: center;
  line-height: 2.5em;
  text-decoration: none;
}


/* Style feedback form */
#fname {
  padding: 13px 5px;
  border: 1px solid black;
  width: 100%;
  border-radius: 8px;
}

#email {
  padding: 13px 5px;
  border: 1px solid black;
  width: 100%;
  border-radius: 8px
}

#message {
  padding: 13px 5px;
  border: 1px solid black;
  width: 100%;
  border-radius: 8px;
  font-family: 'source sans pro', 'open sans';
  resize: none;
}

.contact-form {
  text-align: center;
  font-size: 18px;
  padding: 20px 20px 20px 20px;
  background-size: contain;
  font-family: 'Orbitron', "sans-serif";
}

#contact {
  text-align: center;
}

/* Style submit button */
.btn-submit {
  background: #0077B6;
  color: black;
  height: 30px;
  width: 100px;
  cursor: pointer;
  border-radius: 8px;
  margin: 20px;
  font-family: 'Orbitron', "sans-serif";
}

.playagain-btn {
  background: #0077B6;
  color: black;
  height: 30px;
  width: 120px;
  font-family: 'Orbitron', "sans-serif";
  cursor: pointer;
  margin: auto;
  display: block;
  padding-bottom: 10px;
  border-radius: 15px;
  text-align: center;
  line-height: 2.5em;
  text-decoration: none;
}


/* Mobile Responsiveness Start */
@media only screen and (max-width: 600px) {

  .text-box {
    width: 40px;
    height: 40px;
    text-align: center;
    border: 3px solid #00B4D8;
    border-radius: 8px;
    margin: 0 auto;
    font-family: 'Orbitron', "sans-serif";
  }

  .wordle-section {
    font-size: 16px;
    width: 100%;
    margin: 0 auto;
    align-items: center;
    justify-content: center;
  }

  .contact-bg {
    width: 100%;
    margin: 0 auto;
    background-size: cover;
  }

  .text-box-row {
    margin-left: 20px;
    gap: 10px;
  }

  .word-check-btn {
    height: 40px;
    width: 75px;
    font-family: 'Orbitron', "sans-serif";
    font-weight: 20;
    background-color: #0077B6;
    border-radius: 5px;
    color: black;
  }

  .menu-section {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin: 0 auto;
    padding-top: 30px;
  }

  .success-msg {
    background-color: rgb(115, 200, 30);
    text-align: center;
    padding: 10px;
    font-family: 'Orbitron', "sans-serif";
  }

  .failure-msg {
    background-color: rgb(174, 25, 25);
    text-align: center;
    padding: 10px;
    font-family: 'Orbitron', "sans-serif";
  }

  /* Style rules in Instructions-section  */
  .rules {
    margin-left: 10px;
    margin-right: 10px;
    padding-top: 25px;
    padding-bottom: 25px;
    font-family: 'Orbitron', "sans-serif";
  }

  .rules-wrapper {
    background-color: white;
    margin: 25px;
    padding-left: 20px;
  }

  .rules-wrapper h1 {
    font-family: 'Orbitron', "sans-serif";
    font-size: 30px;
    text-align: center;
    padding-top: 25px;
    color: #2B2B2B;
  }
}
/* Mobile Responsiveness end  */


/* Tablet/Laptop/Desktop Responsiveness Start */
@media only screen and (min-width: 600px) {

  .text-box {
    width: 30px;
    height: 30px;
    text-align: center;
    padding-left: 5px;
    border: 3px solid #00B4D8;
    border-radius: 8px;
    font-family: 'Orbitron', "sans-serif";
  }

  .wordle-section {
    font-size: 16px;
    width: 40%;
    margin: 0 auto;
    align-items: center;
  }

  .text-box-row {
    display: flex;
    padding-top: 10px;
    margin: 0 auto;
    gap: 10px;
    align-items: center;
    justify-content: center;
  }

  .word-check-btn {
    height: 30px;
    width: 100px;
    font-family: 'Orbitron', "sans-serif";
    font-weight: 20;
    background-color: #0077B6;
    border-radius: 5px;
    color: black;
  }

  .menu-section {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin: 0 auto;
    padding-top: 30px;

  }

  .contact-bg {
    width: 400px;
    margin: 0 auto;
    padding: 5px;
    background-size: cover;
  }

  .success-msg {
    background-color: rgb(115, 200, 30);
    text-align: center;
    padding: 10px;
    width: 40%;
    margin: 0 auto;
    align-items: center;
    font-family: 'Orbitron', "sans-serif";
  }

  .failure-msg {
    background-color: rgb(171, 34, 34);
    text-align: center;
    padding: 10px;
    width: 40%;
    margin: 0 auto;
    align-items: center;
    font-family: 'Orbitron', "sans-serif";
  }

  .rules {
    margin-left: 150px;
    margin-right: 150px;
    padding-top: 25px;
    padding-bottom: 50px;
    font-family: 'Orbitron', "sans-serif";
  }

  .rules li{
    padding-top: 10px;
  }

  .rules-wrapper {
    background-color: white;
    margin: 100px 100px 50px 100px;
  }

}
/* Tablet/Laptop/Desktop Responsiveness end */

.no-link {
  text-decoration: none;
}

